--- a/HW4/frontend/src/app/components/list/list.component.html
+++ b/HW4/frontend/src/app/components/list/list.component.html
@@ -1,7 +1,9 @@
 <div>
   <br>
   <mat-card>
-    <button mat-raised-button color="primary" routerLink="/create">Create New Profile</button>
+    <button mat-raised-button color="primary" routerLink="/create">Create New Profile</button> 
+    &nbsp;&nbsp;&nbsp;
+    <button mat-raised-button color="primary" routerLink="/joke">Get a Joke!</button>
     <br><br>
     <mat-divider></mat-divider>
     <br>
@@ -17,6 +19,14 @@
       <ng-container matColumnDef="favorite_category">
         <th mat-header-cell *matHeaderCellDef> Favorite Category </th>
         <td mat-cell *matCellDef="let element"> {{element.favorite_category}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef class="mat-column-right">Actions</th>
+        <td mat-cell *matCellDef="let element" class="mat-column-right">
+          <button mat-button color="primary" (click)="editProfile(element._id)">Edit</button>
+          <button mat-button color="warn" (click)="deleteProfile(element._id)">Delete</button>
+        </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
