fixed wrong commit

--- a/HW3/views/index.ejs
+++ b/HW3/views/index.ejs
@@ -1,15 +1,4 @@
-<html>
-          <head>
-                <title>Chuck Norris</title>
-                <h1>Add a profile!</h1>
-                <form method="post" action="/">
-                    <label>Enter Your Name</label><br>
-                    <input type="text" name="firstName" placeholder="Enter first name..." required>
-                    <input type="text" name="lastName" placeholder="Enter last name..." required>
-                    <input type="text" name="fav_category" placeholder="Enter favorite category..." required>
-                    <input type="submit" value="Add Profile">
-                </form>
-          </head>
+<html></html>
  
         </html>
     <body>  
